<resources>
    <string name="app_name">Venados Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Venados F.C Yucatán</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation drawer menu -->
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Estadísticas</string>
    <string name="menu_players">Jugadores</string>

    <!-- Tab titles -->
    <string name="tab_copa_mx">COPA MX</string>
    <string name="tab_ascenso_mx">ASCENSO MX</string>

    <!-- Game fragment -->
    <string name="venados_name">Venados F.C.</string>

    <!-- Calendar event -->
    <string name="event_description">Un magnífico partido de futbol</string>

    <!-- Statistic Header -->
    <string name="stats_title">Tabla General</string>
    <string name="stats_games">JJ</string>
    <string name="stats_diff">DG</string>
    <string name="stats_points">PTS</string>

    <!-- Player Details -->
    <string name="pd_title">FICHA TÉCNICA</string>
    <string name="pd_birthday">FECHA DE NACIMIENTO</string>
    <string name="pd_birth_place">LUGAR DE NACIMIENTO</string>
    <string name="pd_weight">PESO</string>
    <string name="pd_height">ALTURA</string>
    <string name="pd_last_team">EQUIPO ANTERIOR</string>


</resources>
