<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/stats_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:text="@string/stats_title"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/stats_games"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/stats_diff"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/stats_points"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:textColor="@color/white"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>